syntax = "proto3";

package server.api;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "github.com/xenking/exchange-emulator/api/proto;api";

service Multiplex {
  rpc StartExchange(stream Request) returns (stream Response);
}

message Request {
  oneof request {
    Order create_order = 1;
    Orders create_orders = 2;
    OrderRequest get_order = 3;
    OrderRequest cancel_order = 4;
    OrderRequests cancel_orders = 5;
    google.protobuf.Empty get_balances = 6;
    Balances set_balances = 7;
    PriceRequest get_price = 8;
    google.protobuf.Empty get_exchange_info = 9;
  }
}

message Response {
  oneof response {
    Order create_order = 1;
    Orders create_orders = 2;
    Order get_order = 3;
    Order cancel_order = 4;
    Orders cancel_orders = 5;
    Balances get_balances = 6;
    google.protobuf.Empty set_balances = 7;
    Price get_price = 8;
    google.protobuf.Struct get_exchange_info = 9;
    Error error = 10;
  }
}

message PriceRequest {
  string symbol = 1;
}

message Price {
  string price = 1;
}

message Balances {
  repeated Balance data = 1;
}

message Balance {
  string asset = 1;
  string free = 2 ;
  string locked = 3;
}

message Orders {
  repeated Order orders = 1;
}

message OrderRequests {
  repeated string ids = 1;
}

message OrderRequest {
  string id = 1;
}

enum OrderType {
  LIMIT = 0;
  MARKET = 1;
}

enum OrderSide {
  BUY = 0;
  SELL = 1;
}

enum OrderStatus {
  NEW = 0;
  PARTIALLY_FILLED = 1;
  FILLED = 2;
  CANCELED = 3;
  PENDING_CANCEL = 4;
  REJECTED = 5;
  EXPIRED = 6;
}

message Order {
  string id = 1;
  string symbol = 2;
  OrderSide side = 3;
  OrderType type = 4;
  string price = 5;
  string quantity = 6;
  string total = 7
  [(google.api.field_behavior) = OUTPUT_ONLY];
  OrderStatus status = 8
  [(google.api.field_behavior) = OUTPUT_ONLY];
  uint64 order_id = 9
  [(google.api.field_behavior) = OUTPUT_ONLY];
  string user_id = 10
  [(google.api.field_behavior) = OUTPUT_ONLY];
  int64 transact_time = 11
  [(google.api.field_behavior) = OUTPUT_ONLY];
}

message Error {
  string message = 1;
}

message Ticker {
  string symbol = 1;
  string open = 2;
  string high = 3;
  string low = 4;
  string close = 5;
  string base_volume = 6;
  string quote_volume = 7;
  int64 trades = 8;
  int64 unix = 9;
}
